[package]
name = "gecs"
version = "0.1.0"
authors = ["Daniel Mason <daniel@danielmason.com>"]
edition = "2018"
license = "mit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.3"

[features]
5161bs = ["pin-state", "seven-segment-dp"]
seven-segment-dp = ["pin-state"]
pin-state = []
